Changed to lab.home

--- a/roles/389ds/templates/389ds.inf.j2
+++ b/roles/389ds/templates/389ds.inf.j2
@@ -2,7 +2,7 @@
 FullMachineName= {{ ansible_fqdn }}
 SuiteSpotUserID= dirsrv
 SuiteSpotGroup= dirsrv
-AdminDomain= lab.local
+AdminDomain= lab.home
 ConfigDirectoryAdminID= admin
 ConfigDirectoryAdminPwd= Password1
 
