--- a/roles/openldap/templates/base.ldif.j2
+++ b/roles/openldap/templates/base.ldif.j2
@@ -1,7 +1,7 @@
 dn: {{ ldap_base }}
 objectClass: dcObject
 objectClass: organization
-o: lab.local
+o: lab.home
 dc: lab
 
 dn: ou=people,{{ ldap_base }}
